# Quandra

./: .travis.yml  CMakeLists.txt  README.md
examples/python3/01_initialization/: qa_init.py
qpyapi/: __init__.py  qa_application.py  qa_dynlib.py  qa_io.py  qa_window.py
src/quandra/: CMakeLists.txt  qa_application.c  qa_application.h  qa_common.h  qa_compiler.h  qa_events.h  qa_gamestate.h  qa_gamestatemgr.c  qa_gamestatemgr.h  qa_io.c  qa_io.h  qa_platform.h  qa_platform_impl.h  qa_types.h  qa_window.c  qa_window.h
